--- a/nick/package.json
+++ b/nick/package.json
@@ -24,9 +24,10 @@
   },
 
   "dependencies": {
-    "htmlparser": "1.7.6",
+    "soupselect": ">= 0.2.0"
+    "htmlparser": ">= 1.7.7",
     "hubot":         ">= 2.6.0 < 3.0.0",
-    "hubot-irc": "0.2.1",
+    "hubot-irc": ">= 0.2.1",
     "hubot-scripts": ">= 2.5.0 < 3.0.0"
   },
 
